# lc3web

./: .gitignore  Cargo.toml  README.md  index.html  styles.scss
src/: assembler.rs  lc3.rs  lib.rs  main.rs  util.rs
static/: index.html  styles.css
